--- a/admin-reviews.html
+++ b/admin-reviews.html
@@ -432,46 +432,6 @@
         let allReviews = [];
         let currentFilter = 'all';
         
-        // Sample reviews for demo
-        const sampleReviews = [
-            {
-                _id: '1',
-                user: { fullName: 'John Mukasa', profileImage: 'https://i.pravatar.cc/100?img=1' },
-                movie: { title: 'Black Panther', _id: '123' },
-                rating: 5,
-                text: 'VJ Jingo did an amazing job with the Luganda translation! The action scenes were narrated perfectly and the comedy bits had the whole family laughing.',
-                status: 'approved',
-                createdAt: new Date(Date.now() - 86400000)
-            },
-            {
-                _id: '2',
-                user: { fullName: 'Sarah Nambi', profileImage: 'https://i.pravatar.cc/100?img=5' },
-                movie: { title: 'Spider-Man: No Way Home', _id: '124' },
-                rating: 4,
-                text: 'Great translation by VJ Junior. Some parts were a bit fast but overall very enjoyable. Would love to see more Marvel movies translated.',
-                status: 'pending',
-                createdAt: new Date(Date.now() - 172800000)
-            },
-            {
-                _id: '3',
-                user: { fullName: 'Peter Okello', profileImage: 'https://i.pravatar.cc/100?img=8' },
-                movie: { title: 'The Batman', _id: '125' },
-                rating: 3,
-                text: 'The movie was good but the audio quality could be better. Some parts were hard to hear clearly.',
-                status: 'flagged',
-                createdAt: new Date(Date.now() - 259200000)
-            },
-            {
-                _id: '4',
-                user: { fullName: 'Grace Achieng', profileImage: 'https://i.pravatar.cc/100?img=9' },
-                movie: { title: 'Fast & Furious 9', _id: '126' },
-                rating: 5,
-                text: 'Best translation ever! VJ Emmie makes everything so funny. My kids love watching movies on this platform.',
-                status: 'approved',
-                createdAt: new Date(Date.now() - 345600000)
-            }
-        ];
-        
         // Check admin auth
         document.addEventListener('DOMContentLoaded', function() {
             const token = localStorage.getItem('token');
@@ -503,11 +463,11 @@
                 if (data.status === 'success' && data.data && data.data.length > 0) {
                     allReviews = data.data;
                 } else {
-                    allReviews = sampleReviews;
+                    allReviews = [];
                 }
             } catch (error) {
                 console.error('Error loading reviews:', error);
-                allReviews = sampleReviews;
+                allReviews = [];
             } finally {
                 loading.classList.remove('active');
                 renderReviews();
