Fix admin auth, add TV series import, restore AdSense, improve movie add feedback

--- a/dashboard.html
+++ b/dashboard.html
@@ -1229,5 +1229,8 @@
             <p>Copyright © unruly movies watch 2026</p>
         </div>
     </footer>
+    
+    <!-- System Notification -->
+    <script src="js/system-notification.js"></script>
 </body>
 </html>
